2019-07-05  Omar Sandoval  <osandov@fb.com>

	* Makefile.am: Remove -ldl.
	* tests-subr.sh (self_test_files): Remove libebl_{i386,x86_64}.so.

2019-07-26  Florian Weimer  <fweimer@redhat.com>
	    Mark Wielaard  <mark@klomp.org>

	* run-elfclassify.sh: New test.
	* run-elfclassify-self.sh: Likewise.
	* Makefile.sh (TESTS): Add run-elfclassify.sh and
	run-elfclassify-self.sh.
	(EXTRA_DIST): Likewise.

2019-07-16  Mao Han  <han_mao@c-sky.com>

	* hello_csky.ko.bz2: New testfile.
	* run-addrcfi.sh: Add C-SKY testfile.
	* run-strip-reloc.sh: Likewise.
	* testfilecsky.bz2: New testfile.
	* Makefile.am (EXTRA_DIST): Add hello_csky.ko.bz2 and
	testfilecsky.bz2.

2019-06-28  Mark Wielaard  <mark@klomp.org>

	* Makefile.am (check_PROGRAMS): Add dwelf_elf_e_machine_string.
	(TESTS): Add run-dwelf_elf_e_machine_string.sh.
	(EXTRA_DIST): Likewise.
	(dwelf_elf_e_machine_string_LDADD): New variable.
	* dwelf_elf_e_machine_string.c: New file.
	* run-dwelf_elf_e_machine_string.sh: New test.

2019-07-01  Mark Wielaard  <mark@klomp.org>

	* run-large-elf-file.sh: Add 2GB to mem_needed when running under
	valgrind.

2019-06-18  Mark Wielaard  <mark@klomp.org>

	* Makefile.am (TESTS): Add run-large-elf-file.sh.
	(EXTRA_DIST): Likewise.
	* addsections.c (add_sections): Add sec_size argument, use it
	as the size of the section data.
	(main): Handle extra sec_size argument. Pass to add_sections.
	* run-large-elf-file.sh: New test.

2019-06-03  Mark Wielaard  <mark@klomp.org>

	* elfcopy.c (copy_elf): When swapping the sh_offsets of two sections,
	make sure they are actually next to each other.

2019-05-12  Mark Wielaard  <mark@klomp.org>

	* Makefile.am (check_PROGRAMS): Add elfrdwrnop.
	(TESTS): Add run-reverse-sections.sh and
	run-reverse-sections-self.sh.
	(EXTRA_DIST): Likewise.
	(elfrdwrnop): New variable.
	* elfcopy.c (copy_elf): Add reverse_off argument. Record offsets
	of sections and swap them when possible.
	(main): Check for --reverse-off argument. Pass reverse_offs to